codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_context_only_queue_hint_enabled.snap
---
source: tui2/src/bottom_pane/footer.rs
# tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_context_only_queue_hint_enabled.snap
expression: terminal.backend()
---
"  100% context left · tab to queue message                                      "
