codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_context_tokens_used.snap
---
source: tui2/src/bottom_pane/footer.rs
# tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_context_tokens_used.snap
expression: terminal.backend()
---
"  123K used · ? for shortcuts                                                   "
