codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_copy_feedback_copied.snap
---
source: tui2/src/bottom_pane/footer.rs
assertion_line: 473
# tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_copy_feedback_copied.snap
expression: terminal.backend()
---
"  100% context left · ? for shortcuts · Copied                                  "
