codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_ctrl_c_quit_idle.snap
---
source: tui2/src/bottom_pane/footer.rs
# tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_ctrl_c_quit_idle.snap
expression: terminal.backend()
---
"  ctrl + c again to quit                                                        "
