codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_esc_hint_primed.snap
---
source: tui2/src/bottom_pane/footer.rs
# tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_esc_hint_primed.snap
expression: terminal.backend()
---
"  esc again to edit previous message                                            "
