codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
---
source: tui2/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / for commands                            ! for shell commands                "
# tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
"  shift + enter for newline                 tab to queue message                "
"  @ for file paths                          ctrl + v to paste images            "
"  esc again to edit previous message        ctrl + c to exit                    "
"  shift + tab to change mode                                                    "
"  ctrl + t to view transcript                                                   "
