codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_shortcuts_shift_and_esc.snap
---
source: tui2/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / for commands                            ! for shell commands                "
"  shift + enter for newline                 ⌥ + enter to send immediately       "
"  @ for file paths                          ctrl + v to paste images            "
"  esc again to edit previous message        ctrl + c to exit                    "
"                                            ctrl + t to view transcript         "
